--- a/BlazorServer/_Imports.razor
+++ b/BlazorServer/_Imports.razor
@@ -8,4 +8,5 @@
 @using Microsoft.JSInterop
 @using BlazorServer
 @using BlazorServer.Components
+@using BlazorServer.Helpers.Extensions
 @using BlazorServer.Shared
