--- a/BlazorServer/Pages/_Host.cshtml
+++ b/BlazorServer/Pages/_Host.cshtml
@@ -14,6 +14,7 @@
     <base href="~/" />
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css" rel="stylesheet" />
     <link href="BlazorServer.styles.css" rel="stylesheet" />
 </head>
 <body>
@@ -30,6 +31,11 @@
         <a class="dismiss">🗙</a>
     </div>
 
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+            integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+            crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script src="~/js/common.js"></script>
     <script src="_framework/blazor.server.js"></script>
 </body>
 </html>
